# RippleChat

./: .dockerignore  .env  .gitignore  CMakeLists.txt  CMakePresets.json  debug.Dockerfile  docker-compose.debug.yml  docker-compose.yml  dockerfile  get_structure.bat  project_structure.txt  vcpkg.json
Headers/db/: Database.hpp
Headers/routes/: JwtHandler.hpp  UserHandler.hpp
Headers/tcp/: WebSocketMessage.hpp
Headers/utils/: AuthMiddleware.hpp  Logger.hpp  PasswordHasher.hpp
RippleChat/: CMakeLists.txt
RippleChat/Headers/db/: Database.hpp
RippleChat/Headers/routes/: AdminRoutesHandler.hpp  ClientHandler.hpp  FriendHandler.hpp  FriendRequestHandler.hpp  LoginHandler.hpp  MessageHandler.hpp  PublicUserHandler.hpp  RegisterHandler.hpp
RippleChat/Headers/tcp/: ConnectionManager.hpp  SocketPlatform.hpp  WebSocketHandler.hpp  WebSocketServer.hpp  WebSocketTypes.hpp
RippleChat/Headers/utils/: Config.hpp  HttpParser.hpp  HttpResponseBuilder.hpp  JsonDataParser.hpp  QueryBuilder.hpp
RippleChat/Source/routes/: FriendRequestHandler.cpp  JwtHandler.cpp  LoginHandler.cpp  PublicUserHandler.cpp  RegisterHandler.cpp
RippleChat/Source/routes/WebServerRoutes/: MessageHandler.cpp
RippleChat/Source/utils/: JsonDataParser.cpp
Source/: main.cpp
Source/routes/: FriendsHandler.cpp  LoginHandler.cpp  RegisterHandler.cpp
Source/utils/: Config.cpp  HttpParser.cpp  HttpResponseBuilder.cpp  Logger.cpp
